Finish all of CYK. Inside to be done.

--- a/grammar/emile.cnf
+++ b/grammar/emile.cnf
@@ -1,42 +1,296 @@
-S 0.2 NPa ViADV
-S 0.1 NPp ViADV
-S 0.3 NPa VPa
-S 0.4 NPa VsTS
-ViADV 1 Vi ADV
-VsTS 1 Vs TS
-TS 1 T S
-VPa 0.2 Vt NPa
-VPa 0.1 Vt NPp
-VPa 0.7 VtNP PNPp
-VtNP 0.4 Vt NPa
-VtNP 0.6 Vt NPp
-PNPp 1 P NPp
-NPa 0.1 . John
-NPa 0.1 . Mary
-NPa 0.6 . the_man
-NPa 0.2 . the_child
-P 0.5 . with
-P 0.2 . near
-P 0.2 . in
-P 0.1 . from
-Vi 0.2 . appears
-Vi 0.2 . is
-Vi 0.2 . seems
-Vi 0.4 . looks
-Vs 0.3 . thinks
-Vs 0.3 . hopes
-Vs 0.3 . tells
-Vs 0.1 . says
-Vt 0.1 . knows
-Vt 0.2 . likes
-Vt 0.3 . misses
-Vt 0.4 . sees
-ADV 0.3 . large
-ADV 0.3 . small
-ADV 0.2 . ugly
-ADV 0.2 . beautiful
-NPp 0.7 . the_car
-NPp 0.1 . the_city
-NPp 0.1 . the_house
-NPp 0.1 . the_shop
-T 1 . that
+S 0.746920173 qkixc qyhrz
+S 0.816303092 apaih zcmdi
+S 0.694016405 apaih bovqx
+S 0.988747183 zcmdi zcmdi
+S 0.676409689 qkixc zcmdi
+S 0.761076881 qkixc qkixc
+S 0.593142823 zcmdi qyhrz
+S 0.720924523 bovqx qyhrz
+S 0.998854427 bovqx zcmdi
+S 0.81213279 zcmdi apaih
+S 0.878516404 apaih apaih
+S 0.981974768 qyhrz zcmdi
+S 0.732076247 bovqx apaih
+S 0.85485831 qyhrz bovqx
+S 0.913060391 zcmdi bovqx
+S 0.887481482 apaih qyhrz
+S 0.842484358 qyhrz apaih
+S 0.708736456 qkixc apaih
+S 0.559156586 zcmdi qkixc
+S 0.640181949 qkixc bovqx
+S 0.609458287 qyhrz qkixc
+S 0.688518918 bovqx bovqx
+S 0.972510581 qyhrz qyhrz
+S 0.955178935 bovqx qkixc
+S 0.55397693 apaih qkixc
+apaih 0.534046117 . the_man
+apaih 0.52655488 . the_car
+apaih 0.953960528 qyhrz qkixc
+qyhrz 0.790456081 . the_shop
+zcmdi 0.901513602 S qkixc
+qkixc 0.861585225 . misses
+qkixc 0.766361249 apaih zcmdi
+zcmdi 0.778333858 . appears
+qkixc 0.819938057 . sees
+qkixc 0.613222273 S zcmdi
+zcmdi 0.666163207 qkixc qkixc
+bovqx 0.895694294 zcmdi zcmdi
+zcmdi 0.517838457 apaih S
+bovqx 0.828008534 . that
+qyhrz 0.57379579 . is
+zcmdi 0.789807441 S apaih
+qkixc 0.974795962 . large
+apaih 0.866301528 . beautiful
+bovqx 0.80220684 S qyhrz
+bovqx 0.704238112 . in
+qyhrz 0.593461739 . Mary
+qkixc 0.538620844 . John
+zcmdi 0.690284931 . likes
+apaih 0.922618345 . that
+zcmdi 0.656004276 . beautiful
+qyhrz 0.756035806 bovqx apaih
+qyhrz 0.624010779 . says
+qkixc 0.543553679 qyhrz zcmdi
+qyhrz 0.746985689 . knows
+qyhrz 0.751015534 . ugly
+apaih 0.743422862 S bovqx
+bovqx 0.566504744 . is
+qkixc 0.61677777 . appears
+apaih 0.715095267 . from
+zcmdi 0.966872808 bovqx bovqx
+qyhrz 0.904691796 . thinks
+qyhrz 0.543773633 . in
+qyhrz 0.776272387 zcmdi qkixc
+qyhrz 0.948788806 zcmdi apaih
+qkixc 0.796947889 apaih S
+zcmdi 0.916285064 . large
+qkixc 0.528080479 . that
+qyhrz 0.667519293 . tells
+qkixc 0.71753175 S qyhrz
+qkixc 0.883131796 apaih bovqx
+bovqx 0.523297939 . the_city
+qkixc 0.943092288 . likes
+bovqx 0.801137837 . the_car
+qkixc 0.619901733 . tells
+apaih 0.670547492 . looks
+qyhrz 0.760727869 bovqx zcmdi
+apaih 0.595624636 qyhrz qyhrz
+qyhrz 0.784034433 . large
+qyhrz 0.572107516 qkixc bovqx
+bovqx 0.925835454 . misses
+bovqx 0.708093408 . looks
+qyhrz 0.957684996 bovqx bovqx
+bovqx 0.791678396 qyhrz qyhrz
+zcmdi 0.852468239 . the_city
+zcmdi 0.863342729 qkixc bovqx
+qyhrz 0.970781482 . near
+bovqx 0.808205489 . beautiful
+apaih 0.523401502 . the_city
+apaih 0.653245782 zcmdi S
+bovqx 0.597926883 . large
+apaih 0.544328785 . with
+zcmdi 0.540516566 S qyhrz
+qyhrz 0.921312858 qkixc S
+apaih 0.984040799 qkixc S
+qyhrz 0.671079484 S apaih
+zcmdi 0.668036322 bovqx S
+qyhrz 0.501121198 qkixc apaih
+bovqx 0.584550877 . from
+apaih 0.895594164 bovqx bovqx
+qyhrz 0.604904006 qkixc zcmdi
+bovqx 0.973051617 . appears
+zcmdi 0.967526784 qyhrz bovqx
+qkixc 0.622470769 qyhrz apaih
+zcmdi 0.809951367 S bovqx
+bovqx 0.878859857 zcmdi S
+apaih 0.660787696 bovqx zcmdi
+apaih 0.755878926 . large
+apaih 0.878423191 zcmdi bovqx
+bovqx 0.785097863 apaih apaih
+bovqx 0.960965534 apaih S
+apaih 0.617559683 S zcmdi
+qkixc 0.819283783 . ugly
+bovqx 0.792654983 zcmdi apaih
+qyhrz 0.802050903 bovqx S
+zcmdi 0.784127772 bovqx qkixc
+qyhrz 0.573466598 . seems
+zcmdi 0.788010221 . Mary
+qyhrz 0.916397773 zcmdi S
+qkixc 0.708927557 zcmdi zcmdi
+zcmdi 0.852083459 qyhrz qyhrz
+apaih 0.789810986 bovqx qkixc
+qyhrz 0.897721076 bovqx qkixc
+qkixc 0.668654823 . small
+qkixc 0.639439975 . from
+apaih 0.564799006 . thinks
+qyhrz 0.895356832 apaih apaih
+bovqx 0.616417864 S S
+zcmdi 0.979894681 qyhrz S
+qkixc 0.791604173 zcmdi bovqx
+bovqx 0.620784347 . says
+bovqx 0.574298842 . knows
+apaih 0.595739632 qkixc bovqx
+bovqx 0.819472068 qyhrz qkixc
+qyhrz 0.690436118 S zcmdi
+zcmdi 0.913832511 . thinks
+bovqx 0.671379571 . Mary
+zcmdi 0.934886261 . the_car
+apaih 0.780568687 . ugly
+apaih 0.966242594 . says
+apaih 0.937077675 . knows
+qyhrz 0.590002809 apaih zcmdi
+zcmdi 0.635273545 . with
+zcmdi 0.898703561 . ugly
+zcmdi 0.77782446 apaih apaih
+qyhrz 0.609925246 . beautiful
+zcmdi 0.517850456 qkixc apaih
+apaih 0.99287024 . is
+bovqx 0.58326461 . sees
+qkixc 0.731323531 . the_house
+bovqx 0.537134064 S zcmdi
+zcmdi 0.940027871 . small
+zcmdi 0.851266011 qkixc S
+apaih 0.843887069 S qyhrz
+apaih 0.663769813 zcmdi qkixc
+bovqx 0.773285096 . hopes
+qkixc 0.55405515 S S
+apaih 0.504451835 . seems
+apaih 0.878939249 bovqx S
+zcmdi 0.760779939 bovqx qyhrz
+qkixc 0.929405526 . the_car
+qyhrz 0.640834752 . the_city
+qyhrz 0.822556453 S bovqx
+qyhrz 0.623959471 . the_car
+bovqx 0.527672643 . tells
+apaih 0.528512556 . near
+qyhrz 0.920983536 zcmdi bovqx
+qkixc 0.569694056 apaih apaih
+apaih 0.745252913 zcmdi qyhrz
+bovqx 0.928678543 . ugly
+zcmdi 0.916885087 qkixc qyhrz
+apaih 0.584554973 . Mary
+qkixc 0.6201022 S apaih
+bovqx 0.937727689 . the_man
+apaih 0.521305899 qkixc zcmdi
+zcmdi 0.50663939 . looks
+bovqx 0.957538028 . thinks
+bovqx 0.860779714 . seems
+bovqx 0.928480299 . small
+qkixc 0.596144202 . beautiful
+zcmdi 0.650416667 S S
+zcmdi 0.814913437 apaih qkixc
+bovqx 0.71612414 apaih qkixc
+qyhrz 0.849064444 . with
+qkixc 0.928116255 zcmdi qyhrz
+apaih 0.563167791 . the_shop
+qkixc 0.873736595 bovqx bovqx
+bovqx 0.738458615 apaih qyhrz
+qyhrz 0.829127888 . from
+zcmdi 0.634462063 bovqx apaih
+bovqx 0.861489659 qkixc qyhrz
+apaih 0.513461961 qyhrz zcmdi
+bovqx 0.586156795 qyhrz apaih
+zcmdi 0.959924823 . John
+qyhrz 0.823450867 zcmdi zcmdi
+zcmdi 0.877263159 . says
+zcmdi 0.516339553 . knows
+apaih 0.585474476 . small
+apaih 0.722757361 . appears
+qyhrz 0.649624365 . looks
+zcmdi 0.897391571 . tells
+zcmdi 0.666165151 . seems
+qyhrz 0.782949735 . that
+qyhrz 0.687807281 apaih S
+qkixc 0.861302547 . the_child
+qyhrz 0.66554047 . hopes
+bovqx 0.732834374 . near
+apaih 0.576115657 . tells
+zcmdi 0.546448411 . near
+zcmdi 0.885763078 . in
+bovqx 0.506131767 qkixc S
+bovqx 0.861984672 qyhrz zcmdi
+apaih 0.639512685 qkixc qyhrz
+zcmdi 0.860775924 . that
+apaih 0.688897445 . in
+qkixc 0.866483909 apaih qyhrz
+apaih 0.576071009 . likes
+apaih 0.592788649 qyhrz bovqx
+qkixc 0.607435141 bovqx apaih
+bovqx 0.878736067 qkixc apaih
+zcmdi 0.908118681 apaih bovqx
+bovqx 0.735613833 apaih zcmdi
+qkixc 0.764268548 . the_man
+qyhrz 0.515272561 . John
+qkixc 0.580010748 . says
+qkixc 0.517296766 . knows
+apaih 0.541239591 . the_child
+qkixc 0.830368154 zcmdi S
+apaih 0.616401543 . misses
+qkixc 0.762371183 . seems
+qkixc 0.995912482 bovqx S
+zcmdi 0.70970331 . the_child
+qkixc 0.713428428 zcmdi apaih
+qkixc 0.777794728 . near
+bovqx 0.60118718 qyhrz S
+qkixc 0.504988697 . the_city
+qkixc 0.972896694 . in
+apaih 0.799131012 S S
+zcmdi 0.776335918 qyhrz apaih
+qkixc 0.756342786 qyhrz bovqx
+qyhrz 0.576647294 . sees
+bovqx 0.64214804 . John
+bovqx 0.570551244 . with
+qyhrz 0.587298809 . misses
+apaih 0.736590251 qyhrz S
+zcmdi 0.610272663 apaih qyhrz
+qyhrz 0.891974578 . the_child
+zcmdi 0.580370188 . the_shop
+apaih 0.990863289 . John
+qkixc 0.986718071 . hopes
+qkixc 0.760847626 bovqx zcmdi
+zcmdi 0.752993762 . the_man
+qyhrz 0.57214934 . the_house
+qkixc 0.89343876 . Mary
+qyhrz 0.655115424 . likes
+qyhrz 0.756808084 . the_man
+zcmdi 0.979524255 . is
+bovqx 0.841008657 . the_child
+bovqx 0.832340258 zcmdi qkixc
+qkixc 0.561644926 qyhrz S
+apaih 0.850636477 . hopes
+apaih 0.76093381 S qkixc
+qkixc 0.622829072 S bovqx
+bovqx 0.749033688 . the_house
+bovqx 0.848850856 . likes
+qkixc 0.847279681 . thinks
+qyhrz 0.705137594 apaih qkixc
+zcmdi 0.888903349 . hopes
+bovqx 0.612357504 qkixc zcmdi
+qyhrz 0.654960088 . appears
+apaih 0.515251298 qkixc qkixc
+qkixc 0.553986665 . the_shop
+apaih 0.820416937 zcmdi zcmdi
+apaih 0.56124306 bovqx qyhrz
+qyhrz 0.734290362 . small
+qkixc 0.85885241 . looks
+bovqx 0.643600192 zcmdi qyhrz
+bovqx 0.589117118 qkixc qkixc
+qkixc 0.692844918 qyhrz qyhrz
+zcmdi 0.706747241 . the_house
+zcmdi 0.926194255 . from
+qyhrz 0.554703208 apaih bovqx
+bovqx 0.569907346 S qkixc
+apaih 0.552796126 . the_house
+qkixc 0.825947301 . is
+zcmdi 0.624036674 . misses
+bovqx 0.58738486 S apaih
+zcmdi 0.670497005 . sees
+qkixc 0.698493573 bovqx qyhrz
+qyhrz 0.678362783 qkixc qkixc
+qkixc 0.941228095 . with
+qyhrz 0.872049538 S S
+bovqx 0.958212119 . the_shop
+apaih 0.932166933 . sees
+qyhrz 0.730833955 S qkixc
+zcmdi 0.552302254 qyhrz qkixc
+  
